Attempt to fix mobile menu alignment

--- a/_sass/blog/_layout.scss
+++ b/_sass/blog/_layout.scss
@@ -46,6 +46,10 @@
     &:not(:last-child) {
       margin-right: 20px;
     }
+
+    @include media-query($on-palm) {
+      margin-right: 10px;
+    }
   }
 
   @include media-query($on-palm) {
